# cdi-software-tutorials-2025

./: .gitignore  .gitlab-ci.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  code.json  glossary.md  pyproject.toml
ci-cd/: 00-intro.md  01-overview.md  02-tools.md  03-implementation.md  04-hands-on-goal.md  05-exercise-setup.md  06-audit-exercise.md  07-lint-exercise.md  08-test-exercise.md  09-build-exercise.md  10-run-all-checks.md  11-tasks-exercise.md  12-git-hooks-exercise.md  13-final-pipeline.md  README.md  prerequisites.md
ci-cd-pipelines/: README.md  resources.md
git-basics/: README.md  branching-commits-history.md  demo.bash_profile  ex1-clone-and-setup.md  ex2-local-branch-and-commit.md  ex3-merge-and-rebase.md  further-topics.md  git-going.md  git-help-and-config.md  hello.sh  merging-and-rebasing.md  prereq.md  resources.md  temp-framework.md  tutorial-framework.md  what-is-git.md
git-basics/pages/: branching-commits-history.md  ex1-clone-and-setup.md  ex2-local-branch-and-commit.md  ex2-local-branch.md  ex3-merge-and-rebase.md  further-topics.md  git-going.md  git-help-and-config.md  glossary.md  merging-and-rebasing.md  prereq-mac-linux.md  prereq.md  what-is-git.md
git-platforms/: README.md  resources.md
helloworld/: main.py
ide-git-integration/: README.md  popular-ides.md  prereq.md  resources.md  tips-and-tricks.md  vscode-conflict-management.md  vscode-git-operations.md  vscode-settings-extensions.md  vscode.md  what-is-an-ide.md
ides/: README.md  resources.md
package-container-registry/: README.md  resources.md
tests/: test_main.py
